--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -13,13 +13,13 @@ import SocialLinks from './SocialLinks.astro'
             src="../../assest/logoCurvo.svg"
             alt="Perfil"
         />
-        <p class="mx-auto md:mr-36 text-lg md:text-2xl text-gray-600 dark:text-gray-400 mt-6 md:mt-0 md:ml-8 ">
-            Soy un <strong class="text-black dark:text-white">desarrollador web Full Stack enfocado en el FrontEnd</strong >, estoy aquí para dar vida a ideas y <strong class="text-black dark:text-white">crear experiencias digitales que dejen huella</strong>.
+        <p class="mx-auto md:mr-36 text-lg md:text-2xl text-black dark:text-white mt-6 md:mt-0 md:ml-8 md:uppercase ">
+            Soy un <strong class="text-[#FF8D5C] md:leading-normal">desarrollador web Full Stack enfocado en el FrontEnd</strong >, estoy aquí para dar vida a ideas y <strong class="text-[#FF8D5C] md:dark:text-black md:dark:bg-white rounded-full px-2">crear experiencias digitales que dejen huella</strong>
         </p>
         
     </div>
     <div class="flex gap-x-4 pt-6 items-center justify-center">
-        <SocialLinks href="https://www.linkedin.com/in/dan-agud/">
+        <SocialLinks href="https://www.linkedin.com/in/dan-agud/" >
             <LinkedInIcon class="size-6" />
             LinkedIn
         </SocialLinks>
