--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,5 +1,5 @@
 <span
-    class="bg-gray-100 dark:bg-gray-800 px-6 py-3 rounded-lg shadow-md flex items-center justify-center gap-2 hover:cursor-pointer hover:bg-gray-200 dark:hover:bg-gray-600 hover:scale-110  transition-transform duration-300 md:text-xl"
+    class="bg-[#5569D0] dark:bg-white px-6 py-3 rounded-full shadow-md flex items-center justify-center gap-2 hover:cursor-pointer hover:bg-[#FF8D5C] dark:hover:bg-[#5569D0] dark:hover:text-white hover:scale-110  transition-transform duration-300 md:text-xl text-white dark:text-black"
 >
     <slot />
 </span>
