--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,5 +1,5 @@
-<section class="w-full py-12 md:py-24 lg:py-32" id="contact">
-    <div class="container px-4 md:px-6">
+<section class="w-full py-12 md:py-24 lg:py-32 flex" id="contact">
+    <div class="container px-4 md:px-6 flex flex-col justify-center items-center">
       <h2 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl lg:text-6xl/none">Contact</h2>
       <div class="flex flex-col items-start space-y-6 md:space-y-12 mt-6">
         <div class="flex items-center">
@@ -10,7 +10,7 @@
             type="text"
             value="daniel.agudelo185@gmail.com"
           />
-          <button class="ml-4 bg-blue-500 text-white px-4 py-2 rounded-md">Copy</button>
+          <button class="ml-4 bg-[#5569D0] hover:bg-[#FF8D5C] hover:text-white text-white dark:text-black px-4 py-2 rounded-md">Copy</button>
         </div>
       </div>
     </div>
