--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -33,10 +33,10 @@ const WORK = [
 ---
 
 <section
-    class="w-full py-2 bg-gray-100 dark:bg-gray-800 rounded-xl flex  justify-around"
+    class="w-full py-2 bg-white dark:bg-[#FF8D5C] rounded-lg md:rounded-[90px] flex  justify-around "
     id="education"
 >
-    <div class="flex flex-col items-center md:block">
+    <div class="flex flex-col items-center md:block mt-4 mx-12">
         <h2
             class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl lg:text-6xl/none flex flex-col justify-center mb-12"
         >
@@ -52,7 +52,7 @@ const WORK = [
             }
         </ol>
     </div>
-    <div class="hidden md:block flex-col">
+    <div class="hidden md:block flex-col mt-4 mx-12">
         <h2
             class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl lg:text-6xl/none flex flex-col justify-center mb-12"
         >
