--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import ArrowUp from "./icons/ArrowUp.astro";
         class="w-full mx-auto max-w-screen-xl p-4 flex flex-row items-center justify-evenly"
     >
         <span
-            class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
+            class="text-sm sm:text-center text-yellow-800/90 dark:text-white"
             >© 2024 <a
                 href="https://www.linkedin.com/in/dan-agud/"
                 target="_blank"
