--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@
         <img class="hidden md:block rounded-full size-12" src="../../assest/logoCurvo.svg" alt="Daniel Agudelo">
     </div>
     <nav class="flex-grow flex justify-center space-x-8 ">
-        <a class="text-lg md:text-xl font-semibold text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-200" href="#about">Inicio</a>
-        <a class="text-lg md:text-xl font-semibold text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-200" href="#skills">Skills</a>
-        <a class="text-lg md:text-xl font-semibold text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-200" href="#project">Proyectos</a>
-        <a class="text-lg md:text-xl font-semibold text-gray-600 dark:text-gray-400 hover:text-gray-800 dark:hover:text-gray-200" href="#education">Educación</a>
+        <a class="text-lg md:text-xl font-semibold text-black dark:text-white hover:text-[#FF8D5C] " href="#about">Inicio</a>
+        <a class="text-lg md:text-xl font-semibold text-black dark:text-white hover:text-[#FF8D5C] " href="#skills">Skills</a>
+        <a class="text-lg md:text-xl font-semibold text-black dark:text-white hover:text-[#FF8D5C] " href="#project">Proyectos</a>
+        <a class="text-lg md:text-xl font-semibold text-black dark:text-white hover:text-[#FF8D5C] " href="#education">Educación</a>
     </nav>
 </header>
