--- a/src/components/EducationItem.astro
+++ b/src/components/EducationItem.astro
@@ -13,11 +13,11 @@ const { title, university, date } = Astro.props
   class="absolute w-3 h-3 rounded-full mt-1.5 -start-1.5 border bg-gray-200 dark:bg-gray-700"
 >
 </div>
-<time class="mb-1 text-sm font-normal leading-none text-sky-800 dark:text-sky-200/80">{date}</time
+<time class="mb-1 text-sm font-normal leading-none text-sky-800 dark:text-white">{date}</time
 >
-<h3 class="text-lg font-semibold text-yellow-800 dark:text-yellow-200 mt-2">
+<h3 class="text-lg font-semibold text-yellow-800 dark:text-black md:dark:bg-white rounded-full px-2 mt-2">
   {title}
 </h3>
-<p class="mb-4 text-base font-normal  dark:text-gray-200 text-pretty">
+<p class="mb-4 text-base font-normal  dark:text-white text-pretty">
   {university}
 </p>
