--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -13,12 +13,12 @@ import AstroIcon from "./icons/AstroIcon.astro";
 ---
 
 <section
-    class="w-full py-2 bg-gray-100 dark:bg-gray-800 rounded-xl flex justify-around"
+    class="w-full py-2 bg-white dark:bg-[#FF8D5C] rounded-lg md:rounded-[90px] flex justify-around"
     id="skills"
 >
     <div class="container px-4 md:px-6">
         <h2
-            class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl lg:text-6xl/none mb-4 text-gray-800 dark:text-gray-200 flex justify-center"
+            class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl lg:text-6xl/none mb-4 text-black dark:text-white flex justify-center"
         >
             Skills
         </h2>
@@ -34,10 +34,10 @@ import AstroIcon from "./icons/AstroIcon.astro";
             <Badge><TailwindIcon class="size-6" />Tailwind</Badge>
             <Badge><JavaScriptIcon class="size-6" />JavaScript</Badge>
         </div>
-        <hr class="mt-12 mb-8 border-gray-200 dark:border-gray-700">
+        <hr class="mt-12 mb-8 border-gray-200 dark:border-white">
         <div class="md:flex md:flex-wrap md:justify-start gap-4 md:items-center my-4">
             <h3
-                class="text-3xl font-bold md:pl-16 mb-4 md:mb-0 text-gray-800 dark:text-gray-200  flex justify-center items-center"
+                class="text-3xl font-bold md:pl-16 mb-4 md:mb-0 text-gray-800 dark:text-white  flex justify-center items-center"
             >
                 Aprendiendo:
             </h3>
