--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -1,5 +1,5 @@
 <a
-    class=`${Astro.props.class} px-6 py-3 rounded-full shadow-md flex items-center justify-center gap-2 hover:cursor-pointer hover:border-gray-200 dark:hover:bg-gray-900/10 hover:scale-110  transition-transform duration-300 md:text-xl`
+    class=`${Astro.props.class} px-6 py-3 rounded-full shadow-md flex items-center justify-center gap-2 hover:cursor-pointer hover:border-gray-200 dark:hover:bg-transparent hover:scale-110  transition-transform duration-300 md:text-xl hover:text-[#FF8D5C] `
     href={Astro.props.href}
     target="_blank"
     rel="noopener noreferrer"
